--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,100 @@
-streamlit
-streamlit-chat
-pillow
-requests
-langchain
-tensorflow
-numpy
-opencv-python
-pypdf2
-patchify
+absl-py==2.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.7.0
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==23.2.0
+blinker==1.8.2
+cachetools==5.4.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+dataclasses-json==0.6.7
+flatbuffers==24.3.25
+frozenlist==1.4.1
+gast==0.4.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.32.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+greenlet==3.0.3
+grpcio==1.64.1
+h5py==3.11.0
+idna==3.7
+importlib-metadata==8.0.0
+importlib-resources==6.4.0
+jinja2==3.1.4
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+keras==2.13.1
+langchain==0.2.9
+langchain-community==0.2.7
+langchain-core==0.2.20
+langchain-text-splitters==0.2.2
+langsmith==0.1.88
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+mdurl==0.1.2
+multidict==6.0.5
+mypy-extensions==1.0.0
+numpy==1.24.4
+oauthlib==3.2.2
+opencv-python==4.10.0.84
+opt-einsum==3.3.0
+orjson==3.10.6
+packaging==24.1
+pandas==2.0.3
+patchify==0.2.3
+pillow==10.4.0
+pkgutil-resolve-name==1.3.10
+protobuf==5.27.2
+pyarrow==17.0.0
+pyasn1==0.6.0
+pyasn1-modules==0.4.0
+pydantic==2.8.2
+pydantic-core==2.20.1
+pydeck==0.9.1
+pygments==2.18.0
+pypdf==4.3.0
+pypdf2==3.0.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.7.1
+rpds-py==0.19.0
+rsa==4.9
+six==1.16.0
+smmap==5.0.1
+SQLAlchemy==2.0.31
+streamlit==1.36.0
+streamlit-chat==0.1.1
+tenacity==8.5.0
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorflow==2.13.1
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.4.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4.1
+typing-extensions==4.12.2
+typing-inspect==0.9.0
+tzdata==2024.1
+urllib3==2.2.2
+watchdog==4.0.1
+werkzeug==3.0.3
+wrapt==1.16.0
+yarl==1.9.4
+zipp==3.19.2
